# readit-cpp

./: CMakeLists.txt  README.md
include/: Mine.h  PrettyPrinters.h
src/: CMakeLists.txt  Mine.cpp  main.cpp
src/client/: CMakeLists.txt
src/libraries/util/: CMakeLists.txt
src/libraries/util/headers/util/: Adder.h
src/libraries/util/src/: Adder.cpp
src/libraries/util/test/: AdderTest.cpp  CMakeLists.txt
src/populate/: CMakeLists.txt
src/populate/headers/: Substituter.h
src/populate/src/: Substituter.cpp  main.cpp
src/populate/test/: CMakeLists.txt  SubstituterTest.cpp
src/server/: CMakeLists.txt  main.cpp
src/server/src/: main.cpp
src/server/test/: CMakeLists.txt
test/: CMakeLists.gtest.txt  CMakeLists.txt  MineTest.cpp
